--- a/projects/ngx-query-builder-demo/src/app/app.component.html
+++ b/projects/ngx-query-builder-demo/src/app/app.component.html
@@ -34,7 +34,7 @@
         </div>
       </div>
 
-    <textarea class="output">{{query | json}}</textarea>
+    <textarea class="output" [(ngModel)]="queryText" (ngModelChange)="updateQuery($event)"></textarea>
     </div>
   </div>
 </main>
