Revert to one-way binding baseline and add validation

--- a/projects/ngx-query-builder-demo/src/app/app.component.html
+++ b/projects/ngx-query-builder-demo/src/app/app.component.html
@@ -1,9 +1,9 @@
 <main class="main">
   <div class="content">
     <ngx-query-builder [formControl]='queryCtrl' [config]='currentConfig' [allowRuleset]='allowRuleset' [allowCollapse]='allowCollapse' [allowNot]='allowNot' [persistValueOnFieldChange]='persistValueOnFieldChange'>
-      <ng-container *queryInput="let rule; type: 'textarea'; let onChange=onChange; let getDisabledState=getDisabledState">
-        <textarea class="text-input text-area" [(ngModel)]="rule.value" (ngModelChange)="onChange()" [disabled]="getDisabledState()"
-                  placeholder="Custom Textarea"></textarea>
+      <ng-container *queryInput="let rule; type: 'textarea'; let getDisabledState=getDisabledState">
+      <textarea class="text-input text-area" [(ngModel)]="rule.value" [disabled]=getDisabledState()
+                placeholder="Custom Textarea"></textarea>
       </ng-container>
     </ngx-query-builder>
     <div class="row panel" style="flex-direction: column">
@@ -15,7 +15,7 @@
       </div>
       <div class="row">
         <div>
-          <label><input type="checkbox" (change)="switchModes($event)">Entity Mode</label>
+          <label><input type="checkbox" checked (change)=switchModes($event)>Entity Mode</label>
         </div>
         <div>
           <label><input type="checkbox" [(ngModel)]='allowRuleset'>Allow Ruleset</label>
