Make entity mode optional

--- a/projects/ngx-query-builder-demo/src/app/app.component.html
+++ b/projects/ngx-query-builder-demo/src/app/app.component.html
@@ -15,7 +15,7 @@
       </div>
       <div class="row">
         <div>
-          <label><input type="checkbox" checked (change)=switchModes($event)>Entity Mode</label>
+          <label><input type="checkbox" (change)=switchModes($event)>Entity Mode</label>
         </div>
         <div>
           <label><input type="checkbox" [(ngModel)]='allowRuleset'>Allow Ruleset</label>
