feat(demo): improve JSON editor validation

--- a/projects/ngx-query-builder-demo/src/app/app.component.less
+++ b/projects/ngx-query-builder-demo/src/app/app.component.less
@@ -34,6 +34,10 @@
   overflow: auto;
 }
 
-.output.invalid {
+.output.invalid-query {
   background-color: #f8d7da;
+}
+
+.output.invalid-json {
+  background-color: #f2bcbc;
 }
