--- a/projects/ngx-query-builder-demo/src/app/app.component.html
+++ b/projects/ngx-query-builder-demo/src/app/app.component.html
@@ -34,7 +34,7 @@
         </div>
       </div>
 
-    <textarea class="output" [ngClass]="{'invalid': queryTextInvalid}" [(ngModel)]="queryText" (ngModelChange)="updateQuery($event)"></textarea>
+    <textarea class="output" [title]="queryTitle" [ngClass]="queryTextState" [(ngModel)]="queryText" (ngModelChange)="updateQuery($event)"></textarea>
     </div>
   </div>
 </main>
