feat: add convert to ruleset button

--- a/projects/ngx-query-builder/src/lib/components/query-builder.component.html
+++ b/projects/ngx-query-builder/src/lib/components/query-builder.component.html
@@ -30,6 +30,9 @@
                   </div>
 
                   <div [ngClass]="getClassNames('ruleActions')">
+                    <button type="button" (click)="convertToRuleset(rule, data)" [ngClass]="getClassNames('button')" [disabled]="disabled">
+                      <i [ngClass]="getClassNames('addIcon')"></i> Convert to Ruleset
+                    </button>
                     <ng-template [ngTemplateOutlet]="_ruleRemoveButtonTpl" [ngTemplateOutletContext]="{ $implicit: rule }"/>
                   </div>
                 </div>
