fix layout of convert-to-ruleset button

--- a/projects/ngx-query-builder/src/lib/components/query-builder.component.css
+++ b/projects/ngx-query-builder/src/lib/components/query-builder.component.css
@@ -60,6 +60,7 @@
   .q-button {
     padding: 0 8px;
     background-color: white;
+    white-space: nowrap;
 
     &:disabled {
       display: none;
@@ -162,6 +163,9 @@
 
     .q-rule-actions {
       flex-shrink: 0;
+      display: flex;
+      gap: 10px;
+      align-items: center;
     }
   }
 
