feat: add ruleset-to-rule conversion

--- a/projects/ngx-query-builder/src/lib/components/query-builder.component.html
+++ b/projects/ngx-query-builder/src/lib/components/query-builder.component.html
@@ -33,6 +33,9 @@
                     <button *ngIf="allowConvertToRuleset" type="button" (click)="convertToRuleset(rule, data)" [ngClass]="getClassNames('button')" [disabled]="disabled">
                       Convert to Ruleset
                     </button>
+                    <button *ngIf="allowConvertToRuleset && parentValue && data.rules.length === 1" type="button" (click)="convertRulesetToRule(rule, data, parentValue)" [ngClass]="getClassNames('button')" [disabled]="disabled">
+                      Convert Ruleset to Rule
+                    </button>
                     <ng-template [ngTemplateOutlet]="_ruleRemoveButtonTpl" [ngTemplateOutletContext]="{ $implicit: rule }"/>
                   </div>
                 </div>
