feat: add rule reordering

--- a/projects/ngx-query-builder/src/lib/components/query-builder.component.css
+++ b/projects/ngx-query-builder/src/lib/components/query-builder.component.css
@@ -25,6 +25,18 @@
     }
   }
 
+  .q-up-icon {
+    &::before {
+      content: '⬆';
+    }
+  }
+
+  .q-down-icon {
+    &::before {
+      content: '⬇';
+    }
+  }
+
   .q-arrow-icon {
     &::before {
       content: '▶'
