feat: add ruleset reordering arrows

--- a/projects/ngx-query-builder/src/lib/components/query-builder.component.css
+++ b/projects/ngx-query-builder/src/lib/components/query-builder.component.css
@@ -27,13 +27,13 @@
 
   .q-up-icon {
     &::before {
-      content: '⬆';
+      content: '▲';
     }
   }
 
   .q-down-icon {
     &::before {
-      content: '⬇';
+      content: '▼';
     }
   }
 
