Change "Convert Ruleset to Rule" to "Convert to Rule"

--- a/projects/ngx-query-builder/src/lib/components/query-builder.component.html
+++ b/projects/ngx-query-builder/src/lib/components/query-builder.component.html
@@ -140,7 +140,7 @@
       </ng-container>
       <button *ngIf="allowConvertToRuleset && parentValue && data.rules.length === 1" type="button"
               (click)="convertRulesetToRule(data, parentValue)" [ngClass]="getClassNames('button')" [disabled]="disabled">
-        Convert Ruleset to Rule
+        Convert to Rule
       </button>
     </div>
   </ng-template>
