--- a/projects/ngx-query-builder/src/lib/components/query-builder.component.css
+++ b/projects/ngx-query-builder/src/lib/components/query-builder.component.css
@@ -254,4 +254,9 @@
     display: inline-block;
     vertical-align: top;
   }
+
+  .q-collapsed-summary {
+    margin-left: 8px;
+    font-style: italic;
+  }
 }
