--- a/projects/ngx-query-builder/src/lib/components/query-builder.component.css
+++ b/projects/ngx-query-builder/src/lib/components/query-builder.component.css
@@ -258,5 +258,7 @@
   .q-collapsed-summary {
     margin-left: 8px;
     font-style: italic;
+    font-size: 0.85em;
+    align-self: center;
   }
 }
