Minor color and alignment of = icon

--- a/projects/ngx-query-builder/src/lib/components/query-builder.component.css
+++ b/projects/ngx-query-builder/src/lib/components/query-builder.component.css
@@ -27,7 +27,8 @@
 
   .q-equal-icon {
     fill: currentColor;
-    vertical-align: text-bottom;
+    vertical-align: -1px;
+    color: rgb(52 47 167)
   }
 
   .q-up-icon {
